# modorganizer

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.txt  SConstruct  appveyor.yml  dump_running_process.bat  mappings.imp  massage_messages.py  modorganizer.natvis  qt5_4.imp  qtmappings.imp  readme.md  scons_configure_template.py  vcpkg-configuration.json  vcpkg.json  win.imp
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: dev-ticket.md  game-support-request.md  issue-report.md
.github/workflows/: basic-action.yml  build-qt5-244.yml  build.yml  linting.yml
.tx/: config
ASSEMBLER/: README.md  build-usvfs-x64.ps1  build-usvfs-x86.ps1  build.bat.in  exports_v250.txt  exports_v250_utf8.txt  exports_v252.txt  exports_v252_utf8.txt  prepare-usvfs-source.ps1  v244_x86_exports.txt  v244_x86_exports_utf8.txt  v250_x86_exports.txt  v250_x86_exports_utf8.txt  v252_x86_exports.txt  v252_x86_exports_utf8.txt
ASSEMBLER/patches/: usvfs-0.5.6.0-asm-parameter-exports.patch
ASSEMBLER/src/: usvfs_context_bridge.cpp  usvfs_context_x64.asm  usvfs_context_x86.asm  usvfs_exports_bridge.cpp  usvfs_exports_x64.asm  usvfs_exports_x86.asm  usvfs_kernel32_bridge.cpp  usvfs_ntdll_bridge.cpp  usvfs_parameter_exports_x64.asm  usvfs_parameter_exports_x86.asm  usvfs_runtime_x64.asm  usvfs_runtime_x86.asm  usvfs_x64_v244.def  usvfs_x64_v252.def  usvfs_x86_v2.5.0.def  usvfs_x86_v2.5.2.def  usvfs_x86_v250.def  usvfs_x86_v252.def
ASSEMBLER/tools/: convert-cl-listing-to-ml64.ps1  generate-cl-ml64-asm.ps1
src/: CMakeLists.txt  Doxyfile  ModOrganizer.pro  SConscript  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  activatemodsdialog.cpp  activatemodsdialog.h  activatemodsdialog.ui  apiuseraccount.cpp  apiuseraccount.h  app.manifest  app_icon.rc  archivefiletree.cpp  archivefiletree.h  archivetree.cpp  archivetree.h  baincomplexinstallerdialog.cpp  baincomplexinstallerdialog.h  baincomplexinstallerdialog.ui  bbcode.cpp  bbcode.h  browserdialog.cpp  browserdialog.h  browserdialog.ui  browserview.cpp  browserview.h  categories.cpp  categories.h  categoriesdialog.cpp  categoriesdialog.h  categoriesdialog.ui  categoriestable.cpp  categoriestable.h  categoryimportdialog.cpp  categoryimportdialog.h  categoryimportdialog.ui  colortable.cpp  colortable.h  (+467 more)
src/resources/: markdown.html
src/shared/: SConscript  appconfig.cpp  appconfig.h  appconfig.inc  directoryentry.cpp  directoryentry.h  error_report.cpp  error_report.h  fallout3info.cpp  fallout3info.h  fallout4info.cpp  fallout4info.h  falloutnvinfo.cpp  falloutnvinfo.h  fileentry.cpp  fileentry.h  fileregister.cpp  fileregister.h  fileregisterfwd.h  filesorigin.cpp  filesorigin.h  gameinfo.cpp  gameinfo.h  inject.cpp  inject.h  leaktrace.cpp  leaktrace.h  oblivioninfo.cpp  oblivioninfo.h  originconnection.cpp  originconnection.h  shared.pro  shared.qbs  skyriminfo.cpp  skyriminfo.h  stackdata.cpp  stackdata.h  util.cpp  util.h  windows_error.cpp  (+1 more)
src/stylesheets/: Night Eyes.qss  Paper Automata.qss  Paper Dark by 6788-00.qss  Paper Dark by 6788.qss  Paper Light by 6788-00.qss  Paper Light by 6788.qss  Parchment v1.1 by Bob.qss  Transparent-Style-101-Green.qss  Transparent-Style-BOS.qss  Transparent-Style-Skyrim.qss  dark.qss  dracula.qss  skyrim.qss  vs15 Dark-Green.qss  vs15 Dark-Orange.qss  vs15 Dark-Pink.qss  vs15 Dark-Purple.qss  vs15 Dark-Red.qss  vs15 Dark-Yellow.qss  vs15 Dark.qss
src/tutorials/: Highlight.qml  Tooltip.qml  TooltipArea.qml  TutorialCanceller.qml  TutorialDescription.qml  TutorialOverlay.qml  tutorial_basics.js  tutorial_conflictresolution_main.js  tutorial_conflictresolution_modinfo.js  tutorial_firststeps.js  tutorial_firststeps_browser.js  tutorial_firststeps_main.js  tutorial_firststeps_modinfo.js  tutorial_firststeps_settings.js  tutorial_primer_main.js  tutorial_window_installer.js  tutorials.js  tutorials_installdialog.qml  tutorials_mainwindow.qml  tutorials_modinfodialog.qml  tutorials_nexusdialog.qml  tutorials_settingsdialog.qml
themes/: CMakeLists.txt  make-metadata.ps1
themes/dark-theme/: dark.qss  metadata.json
themes/dracula-theme/: dracula.qss  metadata.json
themes/nighteyes-theme/: metadata.json  nigheyes.qss
themes/parchment-theme/: metadata.json  parchment.qss
themes/skyrim-theme/: metadata.json  skyrim.qss
themes/vs15-themes/: metadata.json  vs15 Dark-Green.qss  vs15 Dark-Orange.qss  vs15 Dark-Pink.qss  vs15 Dark-Red.qss  vs15 Dark-Yellow.qss
